modif bug lien4

--- a/Exercice4/Exercice4/Views/Produit/AfficherToutLesProduit.cshtml
+++ b/Exercice4/Exercice4/Views/Produit/AfficherToutLesProduit.cshtml
@@ -7,12 +7,12 @@
     <title>@ViewData["Title"] - Exercice4</title>
 </head>
 <body>
-     @foreach(Product pr in Model){
+     @foreach(Product pr in Models){
        <ul>
-        <il>@pr.Id</il>
-        <il>@pr.Name</il>
-        <il>@pr.Category</il>
-        <il>@pr.Price</il>
+        <li>@pr.Id</li>
+        <li>@pr.Name</li>
+        <li>@pr.Category</li>
+        <li>@pr.Price</li>
        
        
        
